--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "initDB": "ts-node src/initDB.ts",
+    "test": "ts-node src/test.ts",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
-    "url": "none"
+    "url": "https://google.com"
   },
   "author": "Krux",
   "license": "ISC",
   "dependencies": {
-    "canvas": "^2.10.1",
+    "canvas": "^2.10.2",
     "discord.js": "^14.6.0",
     "discordjs-reaction-role": "^3.1.0",
     "dotenv": "^16.0.3",
+    "emoji-datasource-apple": "^14.0.0",
+    "emoji-regex": "^10.2.1",
+    "mongoose": "^6.7.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
