--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "commonjs",
+        "jsx": "react",
         "rootDir": "./src/",
         "outDir": "./dist/",
         "strict": true,
